# app/Http/Controllers/Api/V1/UserController.php
@@ -19,7 +19,7 @@ use OpenApi\Annotations as OA;
 
 /**
  * @OA\Tag(
- *     name="UserController",
+ *     name="User",
  *     description="User management"
  * )
  */
@@ -34,7 +34,7 @@ class UserController extends Controller
      * @OA\Get(
      *     path="/api/v1/users",
      *     summary="Display a listing of users",
-     *     tags={"UserController"},
+     *     tags={"User"},
      *     security={{"bearerAuth":{}}},
      *
      *     @OA\Parameter(
@@ -101,7 +101,7 @@ class UserController extends Controller
      * @OA\Post(
      *     path="/api/v1/users",
      *     summary="Store a newly created user",
-     *     tags={"UserController"},
+     *     tags={"User"},
      *     security={{"bearerAuth":{}}},
      *
      *     @OA\RequestBody(
@@ -160,7 +160,7 @@ class UserController extends Controller
      * @OA\Get(
      *     path="/api/v1/users/{user}",
      *     summary="Display the specified user",
-     *     tags={"UserController"},
+     *     tags={"User"},
      *     security={{"bearerAuth":{}}},
      *
      *     @OA\Parameter(
@@ -200,7 +200,7 @@ class UserController extends Controller
      * @OA\Put(
      *     path="/api/v1/users/{user}",
      *     summary="Update the specified user",
-     *     tags={"UserController"},
+     *     tags={"User"},
      *     security={{"bearerAuth":{}}},
      *
      *     @OA\Parameter(
@@ -269,7 +269,7 @@ class UserController extends Controller
      * @OA\Delete(
      *     path="/api/v1/users/{user}",
      *     summary="Delete the specified user",
-     *     tags={"UserController"},
+     *     tags={"User"},
      *     security={{"bearerAuth":{}}},
      *
      *     @OA\Parameter(
@@ -315,7 +315,7 @@ class UserController extends Controller
      * @OA\Post(
      *     path="/api/v1/users/{user}/restore",
      *     summary="Restore the specified soft-deleted user",
-     *     tags={"UserController"},
+     *     tags={"User"},
      *     security={{"bearerAuth":{}}},
      *
      *     @OA\Parameter(
@@ -365,7 +365,7 @@ class UserController extends Controller
      * @OA\Delete(
      *     path="/api/v1/users/{user}/force-delete",
      *     summary="Permanently delete the specified user",
-     *     tags={"UserController"},
+     *     tags={"User"},
      *     security={{"bearerAuth":{}}},
      *
      *     @OA\Parameter(
